shifts fix, add role page

--- a/src/Pages/Dashboard/Dashboard.scss
+++ b/src/Pages/Dashboard/Dashboard.scss
@@ -7,7 +7,7 @@
 }
 
 .presence-col.present-highlight {
-    color: #02f242;
+    color: #52398e;
 }
 
 .presence-col.awaiting-highlight {
